# rivutv

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/rivu-config/: Cargo.toml
crates/rivu-config/src/: lib.rs  loader.rs
crates/rivu-config/tests/: fetch_source.rs
crates/rivu-core/: Cargo.toml
crates/rivu-core/src/: decoder.rs  error.rs  lib.rs  models.rs  traits.rs
crates/rivu-player/: Cargo.toml
crates/rivu-player/src/: backends.rs  lib.rs  mpv.rs
crates/rivu-spider/: Cargo.toml
crates/rivu-spider/src/: engine.rs  extractor.rs  lib.rs  parsers.rs  site_api.rs
crates/rivu-spider/src/spider/: bili.rs  generic.rs  mod.rs  wogg.rs  ygp.rs
crates/rivu-ui/: Cargo.toml
crates/rivu-ui/src/: app.rs  lib.rs  widgets.rs
crates/rivu-ui/src/screens/: detail.rs  home.rs  mod.rs  search.rs
docs/plans/: 2026-06-09-rivutv-tvbox-implementation.md
docs/superpowers/plans/: 2026-06-09-spider-engine.md  2026-06-09-tui-playback-chain.md
docs/superpowers/specs/: 2026-06-09-spider-engine-design.md  2026-06-09-tui-playback-chain-design.md
src/: main.rs
tests/: cli_test.rs  integration_test.rs
