[package]
name = "rivu-config"
version = "0.1.0"
edition = "2021"
description = "RivuTV configuration management"

[dependencies]
rivu-core = { path = "../rivu-core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
base64 = "0.22"
