[package]
name = "rivu-core"
version = "0.1.0"
edition = "2021"
description = "RivuTV core types, traits, and data models"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false }
async-trait = "0.1"
base64 = "0.22"
